--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/favicon/android/android-launchericon-192-192.png">
     <link rel="apple-touch-icon" sizes="192x192" href="/favicon/android/android-launchericon-192-192.png">
     
+    <!-- Material Symbols Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    
     <script src="https://www.altan.ai/snippet.js"></script>
   </head>
   <body>
