--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/favicon/android/android-launchericon-192-192.png">
     <link rel="apple-touch-icon" sizes="192x192" href="/favicon/android/android-launchericon-192-192.png">
     
-    <!-- Material Symbols Icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- Google Fonts - Raleway -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     
     <script src="https://www.altan.ai/snippet.js"></script>
   </head>
