deploy: force trigger 1764773300

--- a/index.html
+++ b/index.html
@@ -82,4 +82,4 @@
       window.addEventListener('load', hideAltanBadge);
     </script>
   </body>
-</html>
+</html><!-- Deploy trigger: 1764773300 -->
