--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <meta name="apple-mobile-web-app-title" content="Metalco Pong">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="/favicon/android/android-launchericon-192-192.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="/favicon/android/android-launchericon-192-192.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
     
     <!-- Google Fonts - Raleway -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
