--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <meta name="apple-mobile-web-app-title" content="Metalco Pong">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.png">
-    <link rel="apple-touch-icon" href="/favicon.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     
     <!-- Google Fonts - Raleway -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
